<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="emoji_switcher" translatable="false >Emoji Switcher</string>
    <string name="action_settings">Settings</string>
    <string name="current_emojis_detected">Current emojis detected:</string>
    <string name="unknown">Unknown</string>
    <string name="set">Set</string>
    <string name="refresh">Refresh</string>
    <string name="try_again">Try again</string>
    <string name="check_root">Check root</string>
    <string name="root_problem">There was a problem getting root access.\n\nRoot access is given after you "root" your device, which lets apps do advanced things like modify system files.
It\'s a different process for each device.\n\nDoes this app have root permissions?</string>
    <string name="are_you_rooted">Are you rooted?</string>
    <string name="failed_to_get_root">Failed to get root!</string>
    <string name="switch_emojis_to">Switch emojis to…</string>
    <string name="set_emojis_to_">Set emojis to</string>
    <string name="about">Original fonts by gonsa from XDA. App by Steven Schoen.</string>
    <string name="reboot_question">Reboot?</string>
    <string name="restore_default">Restore default</string>
    <string name="manage_downloads">Manage downloads</string>
    <string name="downloaded_emoji">Downloaded emoji</string>
    <string name="installing_x_emoji">Installing %s emoji</string>
    <string name="reboot_explanation">Most apps require a reboot for new emojis to be recognized.</string>

</resources>
