<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stevenschoen.emojiswitcher.SwitcherActivity">

    <FrameLayout
        android:id="@+id/holder_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/holder_ad"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradient_orange">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/emoji_bg"/>

        <Space
            android:id="@+id/space_actionbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/holder_currentemojistate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/card_bg"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageButton
                    android:id="@+id/button_refreshemojistate"
                    style="@style/EmojiSwitcher.Button.Round"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_refresh"
                    android:text="@string/refresh"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_currentemojisdetected_"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_emojis_detected"
                        android:textColor="#808080"
                        android:textSize="18sp"/>

                    <de.ankri.views.AutoScaleTextView
                        android:id="@+id/text_currentemojisetdetected_is"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textSize="24sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/holder_installemojis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/card_bg"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:text="@string/set_emojis_to_"
                    android:textColor="#808080"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAlignedChildIndex="0"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <Spinner
                        android:id="@+id/spinner_pickemojiset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:spinnerMode="dropdown"/>

                    <Button
                        android:id="@+id/button_installemojiset"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="0"
                        android:clickable="true"
                        android:text="@string/set"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/button_normal"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Button
                android:id="@+id/button_reboot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reboot"
                android:visibility="gone"/>
        </LinearLayout>

        <de.ankri.views.AutoScaleTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/about"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="16sp"/>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/button_removeads"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_above="@id/holder_ad"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_transparent"
        android:paddingBottom="4dp"
        android:paddingEnd="4dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_remove"
        android:visibility="gone"/>
</RelativeLayout>